<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Chicago Team App</string>
    <string name="action_create_an_account">Create an account</string>
    <string name="action_more_ways_to_login">More ways to login</string>
    <string name="action_facebook" translatable="false">Facebook</string>
    <string name="action_login_with_email">Login with Email</string>
    <string name="title_welcome">Welcome.\nLet\'s reach the goal.</string>
    <string name="title_other_login_options">Other login options</string>
    <string name="email">Email</string>
    <string name="hint_email">Email</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="or">or</string>
    <string name="create_an_account" translatable="false">Create an account</string>
    <string name="hint_password">Password</string>
    <string name="hint_empty">This field cannot be blank</string>
    <string name="error_email">Please enter a valid email</string>
    <string name="create">Create</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="facebook_login_protocol_scheme" translatable="false">add_late</string>
    <string name="facebook_app_id" translatable="false">425365211263675</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb425365211263675</string>
    <string name="ic_facebook" translatable="false">ic_facebook</string>
    <string name="button_exit_from_other_login_options" translatable="false">button_exit_from_Other_login_options</string>
    <string name="ic_mail" translatable="false">ic_mail</string>
    <string name="ic_twitter" translatable="false">ic_twitter</string>
    <string name="twitter_consumer_key" translatable="false">2UaouEAtNQucbZivSUNdWULSF</string>
    <string name="twitter_consumer_secret" translatable="false">U2p07xlVOzUEzguOuQVaY0hbvKDdfTh0IUg61dFE3JvDkrLEer</string>
    <string name="Login">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="error">Type at least 4 symbols</string>
    <string name="action_add_task">Add task</string>
    <string name="action_show_lists">Show lists</string>
    <string name="action_add_new_list">Add new list</string>
    <string name="action_profile">My profile</string>
    <string name="msg_of" translatable="false">of</string>
    <string name="hint_name">Name</string>
    <string name="hint_date">Date</string>
    <string name="hint_description">Description</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="hint_new_list_name">New list\'s name</string>
    <string name="action_add">Add</string>
    <string name="dangerous_zone">Dangerous zone!</string>
    <string name="notifications">Notifications</string>
    <string name="lists">Lists</string>
    <string name="return_back" translatable="false">return back</string>
    <string name="exit_from_items_list" translatable="false">Exit from items list</string>
    <string name="save_changes" translatable="false">Save changes</string>
    <string name="unchanged" translatable="false">Unchanged</string>
    <string name="Save">Save</string>
    <string name="your_name">Your name</string>
    <string name="do_you_want_to_delete_your_account">Do you want to delete your account?</string>
    <string name="your_email">Your Email</string>
    <string name="close_window" translatable="false">Close window</string>
    <string name="login_with_email" translatable="false">Login with email</string>
    <string name="task_description" translatable="false">Task description</string>
    <string name="task_title" translatable="false">Task title</string>
    <string name="exit_are_you_sure" translatable="false">Exit: are you sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>
