<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".taskslist.popup.ProfileFragment">

    <ImageButton
        android:id="@+id/button_return"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/White"
        android:contentDescription="@string/return_back"
        android:src="@drawable/baseline_keyboard_arrow_left_black_36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_name"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_return"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_email"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_password"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_notifications"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/notifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_password"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_dangerous_zone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/dangerous_zone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_notifications"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_do_you_want_to_delete_your_account"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/do_you_want_to_delete_your_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dangerous_zone"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_lists"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lists"
        app:layout_constraintStart_toEndOf="@+id/button_return"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/White"
        android:contentDescription="@string/exit_from_items_list"
        android:src="@drawable/baseline_exit_to_app_black_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_your_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/your_name"
        app:layout_constraintBottom_toBottomOf="@+id/text_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_your_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/your_email"
        app:layout_constraintBottom_toBottomOf="@+id/text_email"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_password_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/unchanged"
        app:layout_constraintBottom_toBottomOf="@+id/text_password"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_do_you_want_to_delete_your_account"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/save_changes"
            android:padding="8dp"
            android:src="@drawable/baseline_save_black_24"
            android:visibility="visible" />

        <TextView
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/Save"
            android:textColor="@color/Black"
            android:textSize="@dimen/smallTxtSize"
            android:visibility="visible" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/button_return_from_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@color/White"
        android:contentDescription="@string/button_exit_from_other_login_options"
        android:src="@drawable/ic_action_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_do_you_want_to_delete_your_account" />

    <Switch
        android:id="@+id/switch_password_in_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_notifications"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>