<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.chicagoteamapp.chicagoteamapp.fragments.SignupFragment">

    <ImageButton
        android:id="@+id/button_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_keyboard_arrow_left"
        android:background="@color/White"
        />

    <TextView
        style="@style/Header1Style"
        android:text="@string/create_an_account"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_name_fragment_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/colorHint"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        >

        <EditText
            android:id="@+id/edit_add_name_fragment_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email_fragment_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorHint"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        >

        <EditText
            android:id="@+id/edit_add_email_fragment_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password_fragment_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorHint"
        app:passwordToggleEnabled = "true"
        app:passwordToggleTint="@color/colorHint"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        >

        <EditText
            android:id="@+id/editTextPassword_fragment_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint= "@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginTop="8dp"
        android:id="@+id/button_create_an_account_fragment_signup"
        android:text="@string/create"
        style="@style/ButtonCreateAnAccountStyle"
        />

    <!--<EditText-->
        <!--android:id="@+id/editText"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:ems="10"-->
        <!--android:hint="Password"-->
        <!--android:inputType="textPassword" />-->


</LinearLayout>
