<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:windowSoftInputMode="adjustResize"
    tools:context="com.chicagoteamapp.chicagoteamapp.ui.ForgotPasswordFragment">

    <ImageButton
        android:id="@+id/image_button_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_keyboard_arrow_left"
        android:background="@color/White"
        />

    <TextView
        android:id="@+id/text_forgot_password_fragment_forgot_password"
        style="@style/Header1Style"
        android:text="@string/forgot_password"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email_if_forgot_password_fragment_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorHint"
        android:focusable="true"
        >

        <EditText
            android:id="@+id/edit_text_add_email_if_forgot_password_fragment_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor"
            tools:ignore="TextFields"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginTop="8dp"
        android:id="@+id/button_reset_password_fragment_forgot_password"
        android:text="@string/reset_password"
        style="@style/ButtonCreateAnAccountStyle"
        />

</LinearLayout>
